fix not showing the mags and clubs

--- a/styles/magazine.scss
+++ b/styles/magazine.scss
@@ -88,16 +88,19 @@
       position: relative;
       margin-bottom: 2rem;
       overflow: visible;
+      border-radius: 20px;
 
       .slide {
         width: 100%;
-        height: max-content;
+        height: 100%;
         border-radius: 20px;
+        overflow: visible;
         img {
           width: 100%;
           height: 100%;
-          object-fit: contain;
-          border-radius: 20px;
+          max-height: 700px;
+          object-fit: cover;
+          border-radius: 20px !important;
         }
       }
 
@@ -255,7 +258,7 @@
         @include flex(column, flex-start, flex-start);
         width: 100%;
         max-width: 400px;
-        margin: 30px 0;
+        margin: 30px auto;
 
         .list {
           @include flex(column, flex-start, flex-start);
@@ -286,6 +289,7 @@
               left: 0;
               width: 100%;
               height: 23%;
+              padding: 0 1rem;
               background: #1bc217;
             }
             .text {
